--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -57,6 +57,9 @@ obj-$(CONFIG_CHARGER_MAX14577)	+= max14577_charger.o
 obj-$(CONFIG_CHARGER_MAX77693)	+= max77693_charger.o
 obj-$(CONFIG_CHARGER_MAX8997)	+= max8997_charger.o
 obj-$(CONFIG_CHARGER_MAX8998)	+= max8998_charger.o
+obj-$(CONFIG_BATTERY_MAX77696)	+= max77696-battery.o
+obj-$(CONFIG_CHARGER_MAX77696)	+= max77696-charger.o
+obj-$(CONFIG_EH_MAX77696)	+= max77696-eh.o
 obj-$(CONFIG_CHARGER_BQ2415X)	+= bq2415x_charger.o
 obj-$(CONFIG_CHARGER_BQ24190)	+= bq24190_charger.o
 obj-$(CONFIG_CHARGER_BQ24735)	+= bq24735-charger.o
