--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -337,6 +337,16 @@ config RTC_DRV_MAX77802
 	  This driver can also be built as a module. If so, the module
 	  will be called rtc-max77802.
 
+config RTC_DRV_MAX77696
+	tristate "Maxim MAX77696"
+	depends on MFD_MAX77696
+	help
+	  If you say yes here you will get support for the
+	  RTC of Maxim MAX77696 PMIC.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called rtc-max77696.
+
 config RTC_DRV_RS5C372
 	tristate "Ricoh R2025S/D, RS5C372A/B, RV5C386, RV5C387A"
 	help
