--- a/arch/arm/boot/dts/imx6sl-warp.dts
+++ b/arch/arm/boot/dts/imx6sl-warp.dts
@@ -1,5 +1,7 @@
 /*
  * Copyright 2014, 2015 O.S. Systems Software LTDA.
+ * 
+ * Copyright 2015 Revolution Robotics, Inc.
  *
  * This file is dual-licensed: you can use it either under the terms
  * of the GPL or the X11 license, at your option. Note that this dual
@@ -58,6 +60,20 @@
 		reg = <0x80000000 0x20000000>;
 	};
 
+	regulators {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		reg_1p8v: regulator@2 {
+			compatible = "regulator-fixed";
+			reg = <2>;
+			regulator-name = "1P8V";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+		};
+	};
+
 	usdhc3_pwrseq: usdhc3_pwrseq {
 		compatible = "mmc-pwrseq-simple";
 		reset-gpios = <&gpio4 5 GPIO_ACTIVE_LOW>, 	/* WL_REG_ON */
@@ -68,6 +84,15 @@
 			      <&gpio4 6 GPIO_ACTIVE_LOW>; 	/* BT_RST_N */
 	};
 };
+
+//&epdc {
+//	pinctrl-names = "default";
+//	pinctrl-0 = <&pinctrl_epdc>;
+//	V3P3-supply = <&pu_dummy>;
+//	VCOM-supply = <&vcom_reg>;
+//	DISPLAY-supply = <&disp_reg>;
+//	status = "okay";
+//};
 
 &uart1 {
 	pinctrl-names = "default";
@@ -121,17 +146,52 @@
 	enable-sdio-wakeup;
 	mmc-pwrseq = <&usdhc3_pwrseq>;
 	status = "okay";
+
+	brcmf: bcrmf@1 {
+		compatible = "brcm,bcm4329-fmac";
+		interrupt-parent = <&gpio4>;
+		interrupts = <&gpio4 7 GPIO_ACTIVE_LOW>;
+		interrupt-names = "host-wake";
+	};
+
+
+};
+
+&pxp {
+	status = "okay";
 };
 
 &iomuxc {
 	imx6sl-warp {
+		pinctrl_epdc: epdcgrp {
+			fsl,pins = <
+				MX6SL_PAD_EPDC_D0__EPDC_DATA00	0x1b0B0
+				MX6SL_PAD_EPDC_D1__EPDC_DATA01	0x1b0B0
+				MX6SL_PAD_EPDC_D2__EPDC_DATA02	0x1b0B0
+				MX6SL_PAD_EPDC_D3__EPDC_DATA03	0x1b0B0
+				MX6SL_PAD_EPDC_D4__EPDC_DATA04	0x1b0B0
+				MX6SL_PAD_EPDC_D5__EPDC_DATA05	0x1b0B0
+				MX6SL_PAD_EPDC_D6__EPDC_DATA06	0x1b0B0
+				MX6SL_PAD_EPDC_D7__EPDC_DATA07	0x1b0B0
+				MX6SL_PAD_EPDC_GDCLK__EPDC_GDCLK 0x1b0B0
+				MX6SL_PAD_EPDC_GDSP__EPDC_GDSP	 0x1b0B0
+				MX6SL_PAD_EPDC_GDOE__EPDC_GDOE	 0x1b0B0
+				MX6SL_PAD_EPDC_GDRL__EPDC_GDRL	 0x1b0B0
+				MX6SL_PAD_EPDC_SDCLK__EPDC_SDCLK_P 0x1b0B0
+				MX6SL_PAD_EPDC_SDOE__EPDC_SDOE	 0x1b0B0
+				MX6SL_PAD_EPDC_SDLE__EPDC_SDLE	 0x1b0B0
+				MX6SL_PAD_EPDC_SDSHR__EPDC_SDSHR 0x1b0B0
+				MX6SL_PAD_EPDC_BDR0__EPDC_BDR0	 0x1b0B0
+				MX6SL_PAD_EPDC_SDCE0__EPDC_SDCE0 0x1b0B0
+			>;
+		};
+
 		pinctrl_uart1: uart1grp {
 			fsl,pins = <
 				MX6SL_PAD_UART1_RXD__UART1_RX_DATA	0x41b0b1
 				MX6SL_PAD_UART1_TXD__UART1_TX_DATA	0x41b0b1
 			>;
 		};
-
 
 		pinctrl_uart3: uart3grp {
 			fsl,pins = <
@@ -229,5 +289,49 @@
 				MX6SL_PAD_SD3_DAT3__SD3_DATA3		0x4170f9
 			>;
 		};
+		pinctrl_i2c1: i2c1grp {
+			fsl,pins = <
+				MX6SL_PAD_I2C1_SCL__I2C1_SCL	0x4041b8b1
+				MX6SL_PAD_I2C1_SDA__I2C1_SDA	0x4041b8b1
+			>;
+		};
+		pinctrl_pmic: pmicgrp {
+			fsl,pins = <
+				MX6SL_PAD_REF_CLK_32K__GPIO3_IO22 0x41b0b1 /* IRQ */
+			>;
+		};
+
+		pinctrl_i2c2: i2c2grp {
+			fsl,pins = <
+				MX6SL_PAD_I2C2_SCL__I2C2_SCL 			0x4001a848
+				MX6SL_PAD_I2C2_SDA__I2C2_SDA 			0x4001a848
+				MX6SL_PAD_EPDC_PWRINT__GPIO2_IO12		0x4001a848 // TOUCH_INT
+			>;
+		};
+	};
+};
+
+/include/ "max77696.dtsi"
+
+&i2c1 {
+	clock-frequency = <400000>;
+	pinctrl-names = "default";
+	pinctrl-0 = 	<&pinctrl_i2c1
+			 &pinctrl_pmic>;
+	status = "okay";
+};
+
+&i2c2 {
+	clock-frequency = <400000>;
+	pinctrl-names = "default";
+	pinctrl-0 = 	<&pinctrl_i2c2>;
+	status = "okay";
+
+	wacom_ts@0a {	
+		compatible = "WAC_I2C_AES,WAC_I2C_TOUCH";
+		reg = <0x0a>;
+		interrupt-parent = <&gpio2>;
+		interrupts = <12 2>;
+		status = "okay";
 	};
 };
