--- a/arch/arm/configs/imx_warp_defconfig
+++ b/arch/arm/configs/imx_warp_defconfig
@@ -80,6 +80,7 @@ CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIBCM203X=y
 CONFIG_BT_ATH3K=y
 CONFIG_CFG80211=y
+CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
