WaRP: Change link order to ensure video after mfd
The MFD MAX77696 driver required for EPDC on WaRP
needs to come up before the EPDC driver, but after
the i2c driver. Adjust the link order to ensure
this is the case.

Signed-off-by: Jacob Postman <jacob@revolution-robotics.com>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -17,7 +17,6 @@ obj-y				+= pwm/
 obj-$(CONFIG_PCI)		+= pci/
 obj-$(CONFIG_PARISC)		+= parisc/
 obj-$(CONFIG_RAPIDIO)		+= rapidio/
-obj-y				+= video/
 obj-y				+= idle/
 
 # IPMI must come before ACPI in order to provide IPMI opregion support
@@ -64,6 +63,10 @@ obj-$(CONFIG_FB_INTEL)          += video/fbdev/intelfb/
 
 obj-$(CONFIG_PARPORT)		+= parport/
 obj-y				+= base/ block/ misc/ mfd/ nfc/
+
+# video comes after regulators and mfd so that epdc power can be handled
+obj-y				+= video/
+
 obj-$(CONFIG_DMA_SHARED_BUFFER) += dma-buf/
 obj-$(CONFIG_NUBUS)		+= nubus/
 obj-y				+= macintosh/
