WaRP: Adjust MAX77696 EPD regulator names
Adjust the MAX77696 EPD regulator names to
match with the supply names required by the
mxc_epdc_fb driver.

Signed-off-by: Jacob Postman <jacob@revolution-robotics.com>

--- a/arch/arm/boot/dts/max77696.dtsi
+++ b/arch/arm/boot/dts/max77696.dtsi
@@ -398,14 +398,14 @@
 			 * MAX77696_VREG_EPD_VDDH 5
 			 */
 
-			/*disp_reg:*/ epd0@0 {
+			disp_reg: epd0@0 {
 				reg = <0>;
-				regulator-name = "MAX77696-DISP";
+				regulator-name = "DISPLAY";
 			};
 
-			/*vcom_reg:*/ epd1@1 {
+			vcom_reg: epd1@1 {
 				reg = <1>;
-				regulator-name = "MAX77696-VCOM";
+				regulator-name = "VCOM";
 				regulator-min-microvolt = <44941100>; /* 50000000 + -5058900 */
 				regulator-max-microvolt = <50000000>; /* 50000000 +        0 */
 			};
