--- a/arch/arm/configs/imx_warp_defconfig
+++ b/arch/arm/configs/imx_warp_defconfig
@@ -360,6 +360,8 @@ CONFIG_MXS_DMA=y
 CONFIG_DMATEST=m
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
+CONFIG_FB_TFT=y
+CONFIG_FB_TFT_ILI9341=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_IIO=y
 CONFIG_IMX7D_ADC=y
