--- a/drivers/staging/fbtft/Kconfig
+++ b/drivers/staging/fbtft/Kconfig
@@ -68,6 +68,12 @@ config FB_TFT_ILI9341
 	help
 	  Generic Framebuffer support for ILI9341
 
+config FB_TFT_ILI9341_ERTFT0243
+	tristate "FB driver for the ER-TFT024-3 display with ILI9341 LCD Controller"
+	depends on FB_TFT
+	help
+	  Generic Framebuffer support for FB driver for the ER-TFT024-3 display with ILI9341 LCD Controller
+
 config FB_TFT_ILI9481
 	tristate "FB driver for the ILI9481 LCD Controller"
 	depends on FB_TFT
