WaRP: Add fb_ili9341 ERTFTM0243 display
Add the fb_ili9341 based ER_TFTM024_3 display to
the WaRP build by default.

Signed-off-by: Jacob Postman <jacob@revolution-robotics.com>

--- a/arch/arm/configs/imx_warp_defconfig
+++ b/arch/arm/configs/imx_warp_defconfig
@@ -368,7 +368,7 @@ CONFIG_DMATEST=m
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_FB_TFT=y
-CONFIG_FB_TFT_ILI9341=y
+CONFIG_FB_TFT_ILI9341_ERTFT0243=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_IIO=y
 CONFIG_IMX7D_ADC=y
