WaRP: Select fb_ili9341 based ER_TFTM024_3 driver
Use the fb_ili9341 based ER_TFTM024_3 display for
WaRP.

Signed-off-by: Jacob Postman <jacob@revolution-robotics.com>

--- a/arch/arm/boot/dts/imx6sl-warp.dts
+++ b/arch/arm/boot/dts/imx6sl-warp.dts
@@ -122,7 +122,7 @@
 
 
 	spi2p4-display@0{
-		compatible = "ilitek,ili9341";
+		compatible = "ilitek,ili9341_etftm0243";
 		reg = <0>;
 		status = "okay";
 
