--- a/arch/arm/boot/dts/imx6sl-warp.dts
+++ b/arch/arm/boot/dts/imx6sl-warp.dts
@@ -386,6 +386,13 @@
 			>;
 		};
 
+		pinctrl_i2c3: i2c3grp {
+			fsl,pins = <
+				MX6SL_PAD_EPDC_SDCE2__I2C3_SCL 			0x4001b8b1
+				MX6SL_PAD_EPDC_SDCE3__I2C3_SDA 			0x4001b8b1
+			>;
+		};
+
 		pinctrl_edt_ft5x06: edt_ft5x06grp {
 			fsl,pins = <
 				MX6SL_PAD_EPDC_PWRINT__GPIO2_IO12		0x4001a848 // TOUCH_INT
@@ -431,4 +438,11 @@
 		interrupts = <12 2>;
 		wake-gpios = <&gpio2 12 0>;
 	};
+};
+
+&i2c3 {
+	clock-frequency = <100000>;
+	pinctrl-names = "default";
+	pinctrl-0 = 	<&pinctrl_i2c3>;
+	status = "okay";
 };
